--- a/coffee-house/main/style.css
+++ b/coffee-house/main/style.css
@@ -3,11 +3,18 @@
     src: url("../assets/fonts/Inter-VariableFont_slnt\,wght.ttf");
 }
 
+@media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+
 * {
     box-sizing: border-box;
 }
 
 body {
+    font-family: Inter;
     min-height: 100vh;
     margin: 0; padding: 0;
     display: flex;
@@ -34,14 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     list-style: none;
-    padding: 0 40px;
-    line-height: 40px;
-    text-decoration: none;
-    color: #403F3D;
-    font-family: Inter;
-    font-size: 16px;
     font-style: normal;
-    font-weight: 600;
     line-height: 150%; 
   }
 
@@ -50,19 +50,17 @@ body {
     line-height: 40px;
     text-decoration: none;
     color: #403F3D;
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
     line-height: 150%; 
   }
 
-.dropbtn{
+.dropdown{
     padding: 0 40px;
     line-height: 40px;
     text-decoration: none;
     color: #403F3D;
-    font-family: Inter;
     font-size: 16px;
     font-style: normal;
     font-weight: 600;
@@ -88,6 +86,57 @@ html {
 }
 
 .img-hero-image {
+    display: flex;
+    margin: 0 auto;
+    max-width: 1360px;
+    width: 100%;
     left: 40px;
     border-radius: 40px;
+}
+
+.container2 {
+    height: 200px;
+    top: 110%;
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+ }
+
+h2 {
+    font-size: 60px;
+    font-weight: 600;
+    line-height: 125%;
+}
+
+.word-gray {
+    color: #403F3D;
+    font-style: normal;
+}
+
+.word-peach {
+    color: #B0907A;
+    font-style: italic;
+}
+
+.slider-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.text24 {
+    color: #403F3D;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 125%;
+}
+
+.text16 {
+    color: #403F3D;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 150%;
 }
